# lake-sh

./: .gitignore  CMakeLists.txt  README.md  make_and_run.sh
.github/workflows/: cmake.yml
AK/: CMakeLists.txt  IO.cpp  IO.h  User.cpp  User.h
Libraries/: CMakeLists.txt
Libraries/LibConfig/: CMakeLists.txt  ConfigStore.cpp  ConfigStore.h  ShellConfig.cpp  ShellConfig.h  Token.h  TomlLexer.cpp  TomlLexer.h  TomlParser.cpp  TomlParser.h
Libraries/LibRepl/: CMakeLists.txt  Command.h  Token.h  Tokenizer.cpp  Tokenizer.h
Shell/: Alias.cpp  CMakeLists.txt  Cmd.cpp  Cmd.hpp  CmdHandler.cpp  CmdHandler.hpp  Executor.cpp  Executor.hpp  Parser.cpp  Parser.hpp  Prompt.cpp  Prompt.hpp  Shell.cpp  Shell.hpp  ShellContext.cpp  ShellContext.hpp  User.cpp  User.hpp  main.cpp
Shell/fs/: WorkingDirectory.cpp  WorkingDirectory.hpp
Shell/utils/: Utils.hpp
config/: lake.toml
docs/: prompt-configuration.md
lib/term/: CMakeLists.txt  Terminal.cpp  Terminal.hpp  TerminalObserver.cpp  TerminalObserver.hpp
playground/: CMakeLists.txt  pipe_plg.cpp  simple_shell.cpp
shell/: Alias.cpp  Alias.hpp  CMakeLists.txt  Cmd.cpp  Cmd.hpp  CmdAssembler.cpp  CmdAssembler.hpp  CmdHandler.cpp  CmdHandler.hpp  Executor.cpp  Executor.hpp  History.cpp  History.hpp  Input.hpp  Logger.hpp  Shell.cpp  Shell.hpp  ShellContext.cpp  ShellContext.hpp  Tokenizer.cpp  Tokenizer.hpp  User.cpp  User.hpp  alias.cpp  alias.hpp  clion_launch.cpp  cmd_assembler.cpp  cmd_assembler.hpp  cmd_handler.cpp  cmd_handler.hpp  history.cpp  history.hpp  logger.cpp  logger.hpp  lsh.cpp  lsh.hpp  main.cpp  shell_context.cpp  shell_context.hpp  tokenizer.cpp  (+2 more)
shell/cmd/: cmd.hpp  cmd_cd.cpp  cmd_pwd.cpp
shell/src/: CMakeLists.txt  cmd.cpp  cmd.hpp  cmd_assembler.cpp  cmd_assembler.hpp  cmd_handler.cpp  cmd_handler.hpp  executor.cpp  executor.hpp  logger.cpp  lsh.cpp  lsh.hpp  main.cpp  shell_context.cpp  shell_context.hpp  tokenizer.cpp  tokenizer.hpp  usr.cpp  usr.hpp
shell/src/cmd/: cmd.hpp  cmd_cd.cpp  cmd_pwd.cpp
shell/test/: CMakeLists.txt  cmd_assembler_test.cpp  tokenizer_test.cpp
shell/utils/: utils.hpp
shell_test/: CMakeLists.txt  catch.hpp  cmd_assembler_test.cpp  tokenizer_test.cpp
src/: CMakeLists.txt  Cmd.cpp  Cmd.hpp  CmdHandler.cpp  CmdHandler.hpp  Executor.cpp  Executor.hpp  Logger.hpp  Parser.cpp  Parser.hpp  Prompt.cpp  Shell.cpp  Shell.hpp  ShellContext.cpp  TextRendering.hpp  User.cpp
src/utils/: Utils.hpp
term/: CMakeLists.txt  Terminal.cpp  Terminal.hpp  terminal.cpp  terminal.hpp
tests/: CMakeLists.txt
tests/LibConfig/: CMakeLists.txt  TomlLexerTest.cpp  TomlParserTest.cpp
tests/LibRepl/: CMakeLists.txt  TokenizerTest.cpp
